--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,86 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App{
+  
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.grid{
+  width: 75vw;
+  height: 600px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-evenly;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.rewards{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 10px;
+}
+
+.reward-heading{
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 40px;
+  border-bottom: solid black 1px;
+}
+
+
+.reward-item{
+  margin: 30px;
+  padding: 25px;
+  border: black solid 1px;
+}
+
+.categories{
+  margin: 10px;
+  text-align: center;
+  width: 75%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.category-heading{
+  width: 100%;
+  padding: 10px;
+  border-bottom: solid black 1px;
+}
+
+.category-container{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  padding: 20px 20px 0px 20px;
+  justify-content: space-evenly;
+  border-left: 1px solid black;
+}
+
+.category-container:last-child{
+  border-right:1px solid black;
+}
+
+.category-item{
+  width: 100%;
+  border-left: 1px solid black;
+}
+.category-item:last-of-type{
+  border-right: 1px solid black;
+}
+
+.category-name{
+  width: 100%;
+  border-bottom: 1px solid black;
+}
+
+.category-lane{
+  height: 100%;
+  display: flex;
+  flex: stretch;
 }
