--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 
 .grid{
   width: 75vw;
+  min-width: 600px;
   height: 600px;
   display: flex;
   align-items: flex-start;
@@ -23,7 +24,7 @@
 }
 
 .reward-heading{
-  width: 100%;
+  width: 90%;
   padding: 10px;
   margin-bottom: 40px;
   border-bottom: solid black 1px;
@@ -55,6 +56,7 @@
 
 .category-container{
   width: 100%;
+  min-width: 400px;
   height: 100%;
   display: flex;
   padding: 20px 20px 0px 20px;
@@ -68,6 +70,7 @@
 
 .category-item{
   width: 100%;
+  min-width: 70px;
   border-left: 1px solid black;
 }
 .category-item:last-of-type{
