--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,13 @@
   margin: 10px;
 }
 
+.reward-container{
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .reward-heading{
   width: 90%;
   padding: 10px;
@@ -32,9 +39,19 @@
 
 
 .reward-item{
-  margin: 30px;
+  height: 20px;
+  width: 20px;
+  margin: 5px;
   padding: 25px;
   border: black solid 1px;
+  position: relative;
+}
+
+.delete-button{
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  font-size: xx-small;
 }
 
 .categories{
@@ -85,5 +102,8 @@
 .category-lane{
   height: 100%;
   display: flex;
-  flex: stretch;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
+  /* flex: stretch; */
 }
